add login component

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-// TODO: Validate form fields
+<!--TODO: Validate form fields-->
 <mat-card>
   <mat-card-title>Login</mat-card-title>
   <form #f="ngForm" (ngSubmit)="onSubmit()">
