--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/login">Login</a>
       <a mat-list-item (click)="logout()">Logout</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/items">Items</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
