connect items to api

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -7,7 +7,7 @@
         <mat-label>Item</mat-label>
         <input
           matInput
-          name="item"
+          name="body"
           ngModel
           placeholder="Item"
           required
