--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -24,3 +24,12 @@
     </mat-card-content>
   </form>
 </mat-card>
+
+<mat-card *ngIf="items$">
+  <mat-card-title>Items</mat-card-title>
+  <mat-card-content>
+    <mat-list>
+      <mat-list-item *ngFor="let item of items$">{{ item }}</mat-list-item>
+    </mat-list>
+  </mat-card-content>
+</mat-card>
