--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -29,7 +29,7 @@
   <mat-card-title>Items</mat-card-title>
   <mat-card-content>
     <mat-list>
-<!--      <mat-list-item *ngFor="let item of items$ | async">{{ item.body }}</mat-list-item>-->
+      <mat-list-item *ngFor="let item of items$ | async">{{ item.body }}</mat-list-item>
     </mat-list>
   </mat-card-content>
 </mat-card>
